grammar.txt
program ::= definition*
definition ::= function_definition | variable_definition
function_definition ::= "fn" identifier "(" ")" block_expression
variable_definition ::= "var" identifier ":" identifier ";"
arguments_list ::= (identifier : identifier ("," identifier : identifier)*) | eps
interrupt_statement ::= ("break" | "continue") label? expression? ";"
return_statement ::= "return" expression? ";"
statement ::= expression ";" | variable_definition | interrupt_statement | return_statement 
expression ::= assignment | or | if_expression | block_expression | loop_expression
loop_expression ::= label? ":" "loop" block_expression
block_expression ::= "{" statement* expression? "}"
if_expression ::= "if" expression block_expression ("else" "if" expression block_expression)* ("else" block_expression)?
assignment ::= identifier "=" expression
logical_or ::= logical_and ("||" logical_and)*
logical_and ::= comparison ("&&" comparison)*
comparison ::= bitwise_or (("<" | ">" | "<=" | ">=") bitwise_or)*
bitwise_or ::= bitwise_xor ("|" bitwise_xor)*
bitwise_xor ::= bitwise_and ("^" bitwise_and)*
bitwise_and ::= shift ("&" shift)*
shift ::= addition (("<<" | ">>") addition)*
addition ::= multiplication (("+" | "-") multiplication)*
multiplication ::= unary (("*" | "/" | "%") unary)*
unary ::= ("-" | "!")? primary
primary ::= identifier ("("")")? | literal | "(" expression ")"
literal ::= int_literal | float_literal | string_literal
